# liblex

./: .gitignore  Makefile  README.md  SConstruct  meson.build  tasks.py
demo/: test.c
example/: example1.c
include/: liblex.h  parser.h  parser_event.h
include/liblex/: domish.h  parser.h  parser_event.h
resource/: os-01.lex
src/: parser.c
